--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,20 @@
         android:theme="@style/Theme.BAT"
         tools:targetApi="31" >
         <activity
-            android:name=".Signup"
-            android:exported="false" />
+            android:name=".HomePage"
+            android:exported="true" />
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+            android:name=".signup"
+            android:exported="true" />
+        <activity
+            android:name=".login"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
