--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.bat" >
 
     <application
+        android:name="com.chaquo.python.android.PyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BAT"
         tools:targetApi="31" >
+
         <activity
             android:name=".HomePage"
             android:exported="true" />
