--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
+    id 'com.chaquo.python' version '13.0.0' apply false
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
