--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
         <activity
             android:name=".login"
             android:exported="true" >
+
+        </activity>
+
+        <activity
+            android:name=".category_page"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
