--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <activity
-            android:name=".category_page"
+            android:name=".manual_house"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
